cabal-version: 1.12

name:           pact-lsp
version:        0.0.1
description:    Pact language server
author:         John Wiegley
maintainer:     john@kadena.io
license:        BSD3
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules:
      Pact.LSP.Server
      Pact.LSP.Handlers
      Pact.LSP.Types
      Pact.LSP.PactTrace
  other-modules:
      Paths_pact_lsp
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson
    , base >=4.5 && <5.0
    , bytestring
    , co-log-core
    , lens
    , lsp
    , lsp-types
    , mtl
    , prettyprinter
    , text
    , process
    , parsec
  default-language: Haskell2010

executable pact-lsp
  main-is: Main.hs
  other-modules:
      Paths_pact_lsp
  hs-source-dirs:
      bin
  ghc-options: -Wall -Wno-missing-home-modules
  build-depends:
      base >=4.5 && <5.0
    , pact-lsp
  default-language: Haskell2010

test-suite pact-lsp-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_pact_lsp
  hs-source-dirs:
      tests
  ghc-options: -Wall -Wno-missing-home-modules
  build-depends:
      base >=4.5 && <5.0
    , lsp-test
    , lsp-types
    , pact-lsp
    , text
    , process
    , hspec
    , lens
  default-language: Haskell2010
