cabal-version: 1.12

name:           pact-lsp
version:        0.0.1
description:    Pact language server
author:         Robert Soeldner
maintainer:     robert@kadena.io
license:        BSD3
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules:
      Pact.LSP.Server
      Pact.LSP.Handlers
      Pact.LSP.Types
      Pact.LSP.PactTrace
  other-modules:
      Paths_pact_lsp
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
    base                              >=4.5 && <5.0,
    aeson                             >= 2.1.1 && < 2.2,
    bytestring                        >= 0.10.12 && < 0.11,
    text                              >= 1.2.4 && < 1.3,
    mtl                               >= 2.2.2 && < 2.3,
    co-log-core                       >= 0.3.2 && < 0.4,
    lens                              >= 5.2 && < 5.3,
    lsp                               >= 1.6.0 && < 1.7,
    lsp-types                         >= 1.6.0 && < 1.7,
    parsec                            >= 3.1.14 && < 3.2,
    prettyprinter                     >= 1.7.1 && < 1.8,
    text-rope                         >= 0.2 && < 0.3,
    process                           >= 1.6.13 && < 1.7
  default-language: Haskell2010

executable pact-lsp
  main-is: Main.hs
  other-modules:
      Paths_pact_lsp
  hs-source-dirs:
      bin
  ghc-options: -Wall -Wno-missing-home-modules
  build-depends:
      base >=4.5 && <5.0
    , pact-lsp
  default-language: Haskell2010

test-suite pact-lsp-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_pact_lsp
  hs-source-dirs:
      tests
  ghc-options: -Wall -Wno-missing-home-modules
  build-depends:
      base >=4.5 && <5.0
    , lsp-test
    , lsp-types
    , pact-lsp
    , text
    , process
    , hspec
    , lens
  default-language: Haskell2010